--- a/package.json
+++ b/package.json
@@ -7,18 +7,18 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start": "nest start --builder swc --type-check --watch",
-    "start:dev": "nest start --builder swc --type-check --watch",
+    "start:monolithic": "nest start monolithic --builder swc --type-check --watch",
+    "start:microservices": "nest start microservices --builder swc --type-check --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start:prod": "node dist/apps/monolithic/main",
+    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "eslint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "lint": "npm run eslint && npm run format",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./apps/monolithic/test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
