--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
   "license": "UNLICENSED",
   "scripts": {
     "build": "nest build",
-    "start:monolithic": "nest start monolithic --builder swc --type-check --watch",
-    "start:microservices": "nest start microservices --builder swc --type-check --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:monolithic": "nest start monolithic --debug --builder swc --type-check --watch",
+    "start:microservices": "nest start microservices --debug --builder swc --type-check --watch",
     "start:prod": "node dist/apps/monolithic/main",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "eslint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -23,6 +22,7 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.1",
     "@nestjs/websockets": "^10.3.1",
