--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/microservices": "^10.3.1",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.1",
+    "@nestjs/swagger": "^7.2.0",
     "@nestjs/websockets": "^10.3.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
